syntax="proto3";

package calculator;

option go_package="calculatorpb";

message SumRequest {
    int32 num_1 = 1;
    int32 num_2 = 2;
}

message SumResponse {
    int32 result = 1;
}

message AverageRequest {
    int32 num = 1;
}

message AverageResponse {
    int32 result = 1;
}

message MaximimumRequest{
    int32 num = 1;
}

message MaximumResponse {
    int32 result = 1;
}


service CalculatorService {
    // Unary
    rpc Sum(SumRequest) returns (SumResponse) {};

    // Client-Side 
    rpc Average(stream AverageRequest) returns (AverageResponse) {};

    // Bidirectional Streaming
    rpc Maximum(stream MaximimumRequest) returns (stream MaximumResponse) {};
}